# hy_ros

./: .gitignore  clear_environment.sh  orangepi_start_all_launch.sh  orangepi_uart_debug.sh  server.sh  server_start_keyboard.sh  setup.sh
.trae/rules/: project_rules.md
config/server/: nfs_config.sh
docs/: auto_build.sh
docs/source/: 1_product_introduction.md  2_Configuration_instructions.md  2_Startup_instructions.md  3_Development_instructions.md  3_X86_instructions.md  4_Technical_principles.md  5_Assembly_instructions.md  6_Reference_links.md  README.md  conf.py  index.rst
src/all_launch/: package.xml  setup.cfg  setup.py
src/all_launch/launch/: all_launch.launch.py
src/audio/: package.xml  setup.py
src/audio/audio/: main.py
src/audio/launch/: audio.launch.py
src/audio_asr/: package.xml  setup.cfg  setup.py  test.py
src/audio_asr/audio_asr/: main.py
src/audio_asr/launch/: audio_asr.launch.py
src/audio_rkllm/: CMakeLists.txt  package.xml
src/audio_rkllm/launch/: audio_rkllm.launch.py
src/audio_rkllm/src/: audio_rkllm.cpp  audio_rkllm.h  test.h
src/audio_tts/: package.xml  setup.cfg  setup.py
src/audio_tts/audio_tts/: base64.txt  debug_stream_client.py  https_server.py  main.py  tts_api.py
src/audio_tts/launch/: audio_tts.launch.py
src/butter_robot_description/: CMakeLists.txt  package.xml
src/butter_robot_description/launch/: butter_robot_description.launch.py
src/butter_robot_description/meshes/: base_link.STL  camera_Link.STL  left_arm_Link.STL  left_wheel_Link.STL  radar_Link.STL  right_arm_Link.STL  right_wheel_Link.STL  spine_Link.STL
src/butter_robot_description/urdf/: butter_robot.urdf
src/keyboard_control/: package.xml  setup.py
src/keyboard_control/keyboard_control/: main.py
src/keyboard_control/launch/: keyboard_control.launch.py
src/pid_debug_interfaces/: CMakeLists.txt  package.xml
src/pid_debug_interfaces/msg/: MotorControl.msg  MotorStatus.msg
src/uart/: package.xml  setup.cfg  setup.py
src/uart/launch/: uart.launch.py
src/uart/uart/: main.py
tools/: capture_tool.py
