<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audio_tts</name>
  <version>0.0.0</version>
  <description>Streaming TTS node using Baidu WebSocket API</description>
  <maintainer email="k@todo.todo">k</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>python3-aiohttp</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
